--- a/Sprint3/site/css/custom.css
+++ b/Sprint3/site/css/custom.css
@@ -14,6 +14,7 @@ html {
 }
 html::-webkit-scrollbar {
 	width: 7px;
+	background-color: #8daccc;
 }
 
 html::-webkit-scrollbar-thumb {
@@ -529,7 +530,7 @@ header .navbar-collapse.collapse{
 	position: relative;
 }
 
-.our-activities #containerText {
+.our-activities #textContainer {
 	background-color: #3874CB;
 }
 
