--- a/Sprint1/site/css/custom.css
+++ b/Sprint1/site/css/custom.css
@@ -7,6 +7,7 @@
 /************************************/
 /***** 	    General css		     ****/
 /************************************/
+
 html::-webkit-scrollbar {
 	width: 5px;
 }
@@ -18,7 +19,7 @@ html::-webkit-scrollbar-thumb {
 
 body{
 	font-size: 16px;
-	font-family: 'Roboto', sans-serif;
+	font-family: Poppins !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
