--- a/Sprint5/site/css/custom.css
+++ b/Sprint5/site/css/custom.css
@@ -234,20 +234,16 @@ header .navbar-collapse.collapse{
 
 .navbar-toggle{
 	display: none;
-	position: absolute;
-	top: 50%;
-	right: 20px;
-	transform: translateY(-50%);
 }
 
 .navbar-toggle .slicknav_btn{
 	background: none;
-	border: 1px solid #444;
+	border: 1px solid #FFF;
 	border-radius: 0;
 }
 
 .navbar-toggle .slicknav_icon-bar{
-	background: #444;
+	background: #FFF;
 	box-shadow: none;
 	height: 1px;
 	margin-top: 2px;
@@ -386,10 +382,6 @@ header .navbar-collapse.collapse{
 	margin-right: 4px;
 }
 
-.school-info ul li a:hover{
-	color: #ff5722;
-}
-
 .header-social-link a{
 	display: inline-block;
 	font-size: 14px;
@@ -401,142 +393,6 @@ header .navbar-collapse.collapse{
 	text-align: center;
 	margin-right: 4px;
 }
-
-.banner-slider{
-	position: relative;
-}
-
-.banner-slider:after{
-	content: '';
-	display: block;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0px;
-	height: 16px;
-	background: url(../images/wave-bg3.png) repeat-x;
-	transform: rotate(180deg);
-	z-index: 1;
-}
-
-.banner-slider .container-fluid{
-	padding-left: 0;
-	padding-right: 0;
-}
-
-.banner-slider{
-	position: relative;
-}
-
-.banner-slide{
-	position: relative;
-}
-
-.banner-slide figure{
-	margin: 0;
-}
-
-.banner-slide figure img{
-	width: 100%;
-}
-
-.banner-slide .banner-slide-overlay{
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 30%;
-	right: 30%;
-	transform: translate(0, -50%);
-}
-
-.banner-slide .banner-slide-overlay:before{
-	bottom: auto;
-	top: -4px;
-}
-
-.color-red{
-	color: #f46c6e;
-}
-
-.color-green{
-	color: #a4cf27;
-}
-
-.color-cloud{
-	color: #4fc5d1;
-}
-
-.color-orange{
-	color: #ff5722;
-}
-
-.color-blue{
-	color: #1976d2;
-}
-
-.color-yellow{
-	color: #ffc32f;
-}
-
-.banner-slide-overlay h2{
-	font-family: 'Bubblegum Sans', cursive;
-	font-size: 60px;
-	font-weight: normal;
-	text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 2px 1px #fff, -2px -2px 0 #fff, 2px -2px 0 #fff, -2px 2px 0 #fff;
-	margin-bottom: 0.5em;
-}
-
-.banner-slide-overlay p{
-	color: #232323;
-	font-size: 20px;
-	margin-bottom: 1.5em;
-}
-
-.btn-slider{
-	display: inline-block;
-	background: #1976d2;
-	color: #fff;
-	font-size: 20px;
-	font-weight: 400;
-	padding: 10px 20px;
-	border-radius: 2px;
-	transition: all 0.3s;
-}
-
-.btn-slider:hover{
-	background: #ff5722;
-	color: #fff;
-}
-
-.banner-button-prev,
-.banner-button-next{
-	width: 40px;
-	height: 60px;
-	margin-top: -30px;
-	background: rgba(255,255,255,0.6);
-	position: absolute;
-	top: 50%;
-	z-index: 20;
-	color: #ff5722;
-	text-align: center;
-	line-height: 60px;
-	cursor: pointer;
-	transition: all 0.3s;
-}
-
-.banner-button-prev{
-	left: 0;
-}
-
-.banner-button-next{
-	right: 0;
-}
-
-.banner-button-prev:hover,
-.banner-button-next:hover{
-	background: #fff;
-}
-
 /**************************************/
 /*****   Our Activities area css  *****/
 /**************************************/
@@ -679,7 +535,7 @@ header .navbar-collapse.collapse{
 	background-size: cover;
 	background-position: center center;
 	border-radius: 20px 20px 0px 0px;
-	height: 250px;
+	padding-bottom: 250px;
 }
 
 .vehicule-name {
@@ -1016,248 +872,6 @@ header .navbar-collapse.collapse{
 	height: 15px;
 }
 
-/*************************************/
-/*****   Photo Gallery area css  *****/
-/*************************************/
-
-.photo-gallery{
-	padding: 100px 0 50px;
-	position: relative;
-}
-
-.photo-gallery:after{
-	content: '';
-	display: block;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: -16px;
-	height: 16px;
-	background: url(../images/wave-bg3.png) repeat-x;
-	z-index: 1;
-}
-
-.photo-single{
-	padding: 8px;
-	position: relative;
-	margin-bottom: 50px;
-}
-
-.photo-single img{
-	border: 8px solid #fff;
-}
-
-.photo-single:before{
-	content: '';
-	display: block;
-	width: 80px;
-	height: 80px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-}
-
-.photo-single:after{
-	content: '';
-	display: block;
-	width: 80px;
-	height: 80px;
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	z-index: -1;
-}
-
-.photo-orange:before,
-.photo-orange:after{
-	background: #ff5722;
-}
-
-.photo-blue:before,
-.photo-blue:after{
-	background: #1976d2;
-}
-
-.photo-green:before,
-.photo-green:after{
-	background: #a4cf27;
-}
-
-/*************************************/
-/*****     Contact us area css   *****/
-/*************************************/
-
-.contactus{
-	background: #ecf5fe;
-	padding: 100px 0;
-	position: relative;
-}
-
-.contactus:after{
-	content: '';
-	display: block;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0px;
-	height: 16px;
-	background: url(../images/wave-bg3.png) repeat-x;
-	transform: rotate(180deg);
-}
-
-.contact-form .form-control{
-	border: none;
-	color: inherit;
-	padding: 10px 20px;
-	height: auto;
-	resize: none;
-	background: #fff;
-	border-radius: 8px;
-	border: 4px solid rgba(25,118,209,0.14);
-	outline: 0;
-	appearance: none;
-	-webkit-appearance: none;
-	box-shadow: none;
-}
-
-.btn-contact{
-	background: #1976d2;
-	border: none;
-	color: #fff;
-	padding: 10px 40px;
-	border: 4px solid rgba(255,255,255,0.5);
-	border-radius: 8px;
-	cursor: pointer;
-	transition: all 0.3s;
-	box-shadow: none;
-	outline: 0;
-}
-
-.btn-contact:hover,
-.btn-contact:focus{
-	background: #ff5722;
-	box-shadow: none;
-	outline: 0;
-}
-
-.contact-info p{
-	font-size: 20px;
-	font-weight: 400;
-	color: #707070;
-	position: relative;
-	padding: 5px 0 5px 60px;
-	margin-bottom: 40px;
-}
-
-.contact-info .email:before{
-	content: '\f003';
-	display: block;
-	font-family: FontAwesome;
-	width: 40px;
-	height: 40px;
-	background: #ff5722;
-	box-shadow: 0 0 0 6px rgba(255,87,34,0.5);
-	text-align: center;
-	line-height: 40px;
-	font-size: 18px;
-	color: #fff;
-	border-radius: 50%;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.contact-info .contact:before{
-	content: '\f095';
-	display: block;
-	font-family: FontAwesome;
-	width: 40px;
-	height: 40px;
-	background: #1976d2;
-	box-shadow: 0 0 0 6px rgba(25,118,209,0.5);
-	text-align: center;
-	line-height: 40px;
-	font-size: 18px;
-	color: #fff;
-	border-radius: 50%;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.contact-info .address:before{
-	content: '\f041';
-	display: block;
-	font-family: FontAwesome;
-	width: 40px;
-	height: 40px;
-	background: #a4cf27;
-	box-shadow: 0 0 0 6px rgba(164,207,39,0.5);
-	text-align: center;
-	line-height: 40px;
-	font-size: 18px;
-	color: #fff;
-	border-radius: 50%;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.contact-social-link a{
-	display: inline-block;
-	width: 40px;
-	height: 40px;
-	background: #1976d2;
-	color: #fff;
-	font-size: 18px;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	box-shadow: 0 0 0 6px rgba(25,118,209,0.5);
-	margin: 6px 30px 6px 0;
-	transition: all 0.3s;
-}
-
-.contact-social-link a:hover{
-	background: #ff5722;
-	box-shadow: 0 0 0 6px rgba(255,87,34,0.5);
-}
-
-/*************************************/
-/*****      Footer area css      *****/
-/*************************************/
-
-footer.footer{
-	padding: 60px 0;
-	text-align: center;
-}
-
-.footer-logo{
-	margin-bottom: 30px;
-}
-
-.footer-copyright{
-	max-width: 568px;
-	margin: 0 auto;
-}
-
-.footer-copyright p{
-	color: #707070;
-	line-height: 1.7em;
-	margin: 0;
-}
-
-.footer-copyright p a{
-	color: #ff5722;
-	text-decoration: underline;
-	transition: all 0.3s;
-}
-
-.footer-copyright p a:hover{
-	color: #1976d2;
-}
-
 /************************************/
 /*****       Media Screens      *****/
 /************************************/
@@ -1265,15 +879,27 @@ footer.footer{
 @media only screen and (max-width: 1536px){
 	.events-swiper .article-background .events-info .events-date p {
 		font-weight: 700;
-		font-size: 20px;
+		font-size: 18px;
 		margin: 0;
 	}
 	
+	.events-swiper .article-background .events-info {
+		margin-top: 75px;
+	}
+
 	.events-swiper .swiper-slide {
 		border-radius: 25px;
 		border: 2px solid #3874CB;
 		font-size: 16px;
 		font-weight: 600;
+	}
+
+	.events-swiper {
+		height: 550px;
+	}
+
+	#about-avion {
+		top: 165px;
 	}
 
 	.vehicule-name > p {
@@ -1322,6 +948,10 @@ footer.footer{
 }
 
 @media only screen and (max-width: 1385px){
+	.about-us #about-avion {
+		top: 210px;
+	}
+
 	.header .navbar-nav{
 		display: none;
 	}
@@ -1331,7 +961,7 @@ footer.footer{
 	}
 
 	#main-navbar {
-		background-color: #1976d2;
+		background-color: rgb(42, 120, 235);
 	}
 
 	.header .container-fluid .navbar-brand{
@@ -1354,8 +984,75 @@ footer.footer{
 	}
 }
 
+@media only screen  and (max-width: 1175px){
+	.faculty .members .members-name {
+		font-size: 20px;
+	}
+
+	.faculty .members .members-role {
+		font-size: 16px;
+	}
+
+	.faculty .members .members-phone {
+		font-size: 20px;
+	}
+
+	.faculty .members .members-socialLink img {
+		width: 30px;
+	}
+}
+
 /* Mobile Layout */
 @media only screen and (max-width: 991px){
+	.events-swiper .article-background .events-info .events-date p {
+		font-size: 16px;
+	}
+
+	.events-swiper {
+		height: 635px;
+	}
+	.about-us .about-us-content {
+		min-width: 100%;
+	}
+
+	.about-us .about-text {
+		margin-top: 50px;
+	}
+
+	.about-us .planeMontgolfiere {
+		margin-top: 50px;
+		min-width: 100%;
+	}
+
+	.about-us .planeMontgolfiere img {
+		width: 40%;
+	}
+
+	.about-us .planeMontgolfiere #about-avion {
+		top: 50px;
+		left: 190px;
+	}
+
+	.members-container {
+		flex-wrap: wrap;
+	}
+
+	.faculty .members {
+		width: 35%;
+	}
+	.vehicule-name > p {
+		font-size: 16px;
+	}
+
+	.vehicule {
+		width: 45%;
+		margin-bottom: 20px;
+	}
+
+	.courses > div > div {
+		flex-wrap: wrap;
+		align-items: center !important;
+	}
 
 	#cookieContainer {
 		border-radius: 0px;
@@ -1365,44 +1062,35 @@ footer.footer{
 		box-shadow: 0px 0px 0px 0px black;
 	}
 
-	.our-activities > div > article > div >div > img{
+	.our-activities > div > article > div > div > img{
 		width: 100%;
 	}
 
-	.our-activities > div > article > div >div > p{
+	.our-activities > div > article > div > div > p{
 		font-size: 12px;
+	}
+
+	#plane {
+		min-width: 100%;
+	}
+
+	#textContainer {
+		min-width: 100%;
 	}
 
 	.navbar-brand{
 		padding-top: 18px;
 		padding-bottom: 18px;
 	}
-	
-	.banner-slide .banner-slide-overlay{
-		left: 10%;
-		right: 10%;
-	}
-	
-	.banner-slide-overlay h2{
-		font-size: 36px;
-	}
-	
-	.activities-single{
-		padding: 0;
-	}
-	
-	.course-single{
-		max-width: 480px;
-		margin: 0 auto 30px;
+}
+@media only screen and (max-width: 990px) {
+	.events-swiper {
+		width: 55%;
+		height: 550px;
 	}
 }
 
-@media only screen and (max-width: 767px){
-
-	#cookieContainer {
-		bottom: 73px;
-	}
-
+@media only screen and (max-width: 855px){
 	#meteoContainer {
 		margin-top: 50px;
 		justify-content: center !important;
@@ -1410,36 +1098,6 @@ footer.footer{
 
 	#meteoContainer #ww_d7dc99ec54c54 {
 		transform: scale(1);
-	}
-
-	.courses > div > div {
-		flex-direction: column;
-	}
-
-	.courses > div > h2 {
-		margin-bottom: 50px;
-	}
-
-	.vehicule-name {
-		width: 50%;
-	}
-
-	.vehicule {
-		width: 75%;
-		margin-bottom: 50px;
-	}
-
-	.our-activities > div > article > div >div > img{
-		width: 45%;
-	}
-
-	.our-activities > div > article > div >div > p{
-		font-size: 16px;
-	}
-	
-	#meteoContainer {
-		margin-top: 20px;
-		transform: translateY(0);
 	}
 
 	#home article {
@@ -1454,36 +1112,44 @@ footer.footer{
 	.titleACF2L {
 		font-size: 40px;
 	}
-	
-	.courses,
-	.faculty{
-		padding: 60px 0 30px;
-	}
-	
-	.about-us,
-	.events,
-	.contactus{
-		padding: 60px 0;
-	}
-	
-	.testimonial{
-		padding: 60px 0 0;
-	}
-	
-	.photo-gallery{
-		padding: 60px 0 10px;
-	}
-	
-	.section-title{
-		margin-bottom: 40px;
-	}
-	
-	.section-title h2{
-		font-size: 24px;
+}
+
+@media only screen and (max-width: 767px){
+.members-container {
+	justify-content: space-around;
+}
+
+	.courses > div > div {
+		justify-content: center;
 	}
 
-	.section-title p{
-		font-size: 14px;
+	.vehicule {
+		width: 65%;
+	}
+
+	#cookieContainer {
+		bottom: 73px;
+	}
+
+	.vehicule-name {
+		width: 50%;
+	}
+
+	.our-activities > div > article > div >div > img{
+		width: 45%;
+	}
+
+	.our-activities > div > article > div >div > p{
+		font-size: 16px;
+	}
+	
+	#meteoContainer {
+		margin-top: 20px;
+		transform: translateY(0);
+	}
+	
+	.courses, .faculty, .about-us, .events{
+		padding: 50px 25px;
 	}
 	
 	.header-social-link,
@@ -1497,53 +1163,21 @@ footer.footer{
 	
 	.school-info ul li:before{
 		display: none;
-	}
-	
-	.banner-slide .banner-slide-overlay{
-		left: 14%;
-		right: 14%;
-	}
-	
-	.banner-slide-overlay h2{
-		font-size: 20px;
-		text-shadow: 1px 0 0 #fff, -1px 0 0 #fff, 0 1px 0 #fff, 0 -1px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
-	}
-	
-	.btn-slider{
-		padding: 6px 20px;
-		font-size: 14px;
-	}
-	
-	.activities-single{
-		margin-bottom: 40px;
-	}
-	
-	.about-image{
-		margin-bottom: 40px;
-	}
-	
-	.testimonial-slider-wrapper-outer{
-		padding: 10px 10px 0 10px;
-	}
-	
-	.testimonial-slide{
-		padding: 30px 20px 0;
-	}
-	
-	.testimonial-slide h3{
-		font-size: 22px;
-	}
-	
-	.testimonial-slide p{
-		font-size: 18px;
-	}
+	}	
 }
 
 @media only screen and (max-width: 575px){
-	
-#home > article {
-	padding: 190px 0px 85px 0px;
-}
+	.events-swiper .article-background .events-info {
+		margin-top: 45px;
+	}
+
+	.events-swiper .article-background .events-info .events-date {
+		padding: 10px;
+	}
+
+	#home > article {
+		padding: 190px 0px 85px 0px;
+	}
 
 	.our-activities #textContainer {
 		padding: 50px 25px;
@@ -1570,22 +1204,35 @@ footer.footer{
 		padding-left: 15px !important;
 		padding-right: 15px !important;
 	}
-	
-	.contact-info p{
-		font-size: 18px;
+}
+
+@media only screen and (max-width: 412px) {
+	.our-activities-title h2, .courses-title h2, .about-title h2, .faculty-title h2, .events-title h2 {
+		font-size: 35px !important;
 	}
-	
-	.contact-social-link{
-		text-align: center;
-		margin-bottom: 40px;
+
+	.about-us .planeMontgolfiere #about-avion {
+		top: 15px;
+		left: 85px;
 	}
-	
-	.contact-social-link a{
-		margin: 6px 10px;
+
+	.faculty .faculty-title {
+		margin-bottom: 0px;
 	}
-	
-	.event-single{
-		margin: 20px;
-		box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
+
+	.faculty .members {
+		width: 70%;
 	}
+
+	.events-swiper {
+		width: 100%;
+	}
+}
+
+@media only screen and (max-width: 396px) {
+	.our-activities > div > article > div > div > div {
+		width: 100px;
+		height: 100px;
+	}
+
 }
